--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -42,12 +42,14 @@
     <ClInclude Include="..\..\..\sonia\mpl\fold.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\iterator.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\lambda.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\lambda_fwd.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\less.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\max_element.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\min_element.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\next.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\not_equal_to.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\plus.hpp" />
+    <ClInclude Include="..\..\..\sonia\mpl\pop_front.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\protect.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\push_back.hpp" />
     <ClInclude Include="..\..\..\sonia\mpl\push_front.hpp" />
