--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -30,7 +30,12 @@
     <ClInclude Include="..\..\..\agnostic\optimized\vector.hpp" />
     <ClInclude Include="..\..\..\agnostic\pool.hpp" />
     <ClInclude Include="..\..\..\agnostic\smart_ptr\intrusive_ptr.hpp" />
+    <ClInclude Include="..\..\..\agnostic\std\algorithm.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\algorithm\copy.hpp" />
+    <ClInclude Include="..\..\..\agnostic\std\algorithm\fill_n.hpp" />
+    <ClInclude Include="..\..\..\agnostic\std\algorithm\iter_swap.hpp" />
+    <ClInclude Include="..\..\..\agnostic\std\algorithm\swap.hpp" />
+    <ClInclude Include="..\..\..\agnostic\std\array.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\atomic\memory_order.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\exception.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\exception\exception.hpp" />
@@ -65,6 +70,8 @@
     <ClInclude Include="..\..\..\agnostic\std\new.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\new\placement_new.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\span.hpp" />
+    <ClInclude Include="..\..\..\agnostic\std\stdexcept\logic_error.hpp" />
+    <ClInclude Include="..\..\..\agnostic\std\stdexcept\out_of_range.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\type_traits.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\type_traits\add_const.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\type_traits\add_cv.hpp" />
@@ -105,13 +112,18 @@
     <ClInclude Include="..\..\..\agnostic\std\type_traits\is_nothrow_copy_constructible.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\type_traits\is_nothrow_default_constructible.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\type_traits\is_nothrow_move_assignable.hpp" />
+    <ClInclude Include="..\..\..\agnostic\std\type_traits\is_nothrow_move_constructible.hpp" />
+    <ClInclude Include="..\..\..\agnostic\std\type_traits\is_nothrow_swappable.hpp" />
+    <ClInclude Include="..\..\..\agnostic\std\type_traits\is_nothrow_swappable_with.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\type_traits\is_null_pointer.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\type_traits\is_object.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\type_traits\is_pointer.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\type_traits\is_reference.hpp" />
+    <ClInclude Include="..\..\..\agnostic\std\type_traits\is_referenceable.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\type_traits\is_rvalue_reference.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\type_traits\is_same.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\type_traits\is_scalar.hpp" />
+    <ClInclude Include="..\..\..\agnostic\std\type_traits\is_swappable_with.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\type_traits\is_trivial.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\type_traits\is_trivially_assignable.hpp" />
     <ClInclude Include="..\..\..\agnostic\std\type_traits\is_trivially_constructible.hpp" />
